[package]
name = "minecraft-format"
version = "0.1.0"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft-packet-derive = {path="../minecraft-packet-derive"}

[build-dependencies]
minreq = {version="2.3", features=["https"]}
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}
convert_case = "0.4"
