[package]
name = "minecraft-entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minecraft-protocol = { path = "../minecraft-protocol" }
minecraft-positions = { path = "../minecraft-positions" }
minecraft-entities-derive = { path="../minecraft-entities-derive" }
