[package]
name = "minecraft-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
minecraft-protocol = { path="../minecraft-protocol" }
minecraft-server-derive = { path="../minecraft-server-derive" }
