[package]
name = "minecraft-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.29"
minecraft-protocol = { path="../minecraft-protocol" }
minecraft-entities = { path="../minecraft-entities" }
minecraft-positions = { path="../minecraft-positions" }
tags-macros = { path = "../tags-macros"}
